--- a/projects/projects.css
+++ b/projects/projects.css
@@ -8,7 +8,7 @@ body{
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0.2)
     ),
-	url(https://i.imgur.com/Wxm5qhG.jpg);
+	url(http://i.imgur.com/Wxm5qhG.jpg);
 	 position:relative;
 	 background-size: cover;
 	 background-position: center center;
