--- a/projects/projects.css
+++ b/projects/projects.css
@@ -8,7 +8,7 @@ body{
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0.2)
     ),
-	url(http://i.imgur.com/Wxm5qhG.jpg);
+	url(https://user-images.githubusercontent.com/14062258/27520101-ec245c52-5a02-11e7-8189-1aa82c6ca0d7.jpg);
 	 position:relative;
 	 background-size: cover;
 	 background-position: center center;
