--- a/about/about.css
+++ b/about/about.css
@@ -76,7 +76,7 @@ p{
 	 linear-gradient(
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
-    )
+    );
   color:#00004d;
   font-size:25px;
   text-shadow: 1px 1px #555;
