--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 ============================================================================= */
 html         { overflow-y:hidden; }
 .page        {
-	bottom:0;
+  bottom:0;
 	/*padding-top:150px;*/
-	position:absolute;
-	text-align:center;
-	top:0;
-	width:100%;
+  position:absolute;
+  text-align:center;
+  top:0;
+  width:100%;
   background-size:cover;
   background-position: center center;
   background-repeat:no-repeat;
@@ -18,7 +18,7 @@ html         { overflow-y:hidden; }
  #title1{
 	 font-size:60px;
 	 text-align:center;
-   color:#045eef;
+         color:#045eef;
  	 text-shadow: 2px 2px #95b7ed;
   }
  #title2{
@@ -35,25 +35,24 @@ html         { overflow-y:hidden; }
  }
 
 .navigation-top{
-	  display:inline-block;
-	  background-color:#acb0b7;
-	  width:450px;
-    font-size:8px;
-    padding: 4px 4px;
-    margin-top: 200px;
-
-    opacity:0.8;
-    border-radius:15px;
+	 display:inline-block;
+	 background-color:#acb0b7;
+	 width:450px;
+         font-size:8px;
+         padding: 4px 4px;
+         margin-top: 200px;
+         opacity:0.8;
+         border-radius:15px;
 }
 .sidenav{
-	    margin: 0 auto;
-	    max-width: 980px;
+	 margin: 0 auto;
+	 max-width: 980px;
 }
 ul.sidenav li a:hover {
 	display: inline-block;
-    color:		#ff9900;
-    text-decoration: none;
-    text-shadow: 2px 2px #555;
+        color:#ff9900;
+        text-decoration: none;
+        text-shadow: 2px 2px #555;
 }
 ul{
 	list-style-type:none;
@@ -62,52 +61,52 @@ ul{
 .active{
 	color:#00004d;
 	font-size: 30px;
-  display: inline-block;
-  margin-left:20px;
+        display: inline-block;
+        margin-left:20px;
 
 }
 
  li a{
-    float:left;
-     list-style-type:none;
+        float:left;
+        list-style-type:none;
 }
 a {text-decoration: none}
 
 #name{
    	text-align:center;
-    color:#f7f7f7;
+        color:#f7f7f7;
    	text-shadow: 3px 3px #555;
    	font-size: 50px;
-    margin-top:30px;
+        margin-top:30px;
    }
 #progress {
    	text-shadow: 1px 1px #88f8f8;
-    text-align:center;
+        text-align:center;
    	color:#2503FC;
    	font-size: 30px;
    }
 h2 {
    	text-align:center;
    	color:#FC0303 !important;
-    text-shadow: 1px 1px #f7f7f7;
+        text-shadow: 1px 1px #f7f7f7;
    }
 #phone{
 	font-size: 30px;
 	color:#f4f5f7;
-  font-family: "Arial", sans-serif;
+        font-family: "Arial", sans-serif;
 }
 #portfolio{
 	font-size:40px;
 	text-align:center;
-  color:#ff9900;
+        color:#ff9900;
 	text-shadow: 1px 1px #f7f7f7;
 }
 #description{
 	background-color:#acb0b7;
 	position: absolute;
-  margin-top:130px;
+        margin-top:130px;
 	margin-left:20%;
-  margin-right:20%;
+        margin-right:20%;
 	opacity:0.6;
 	border-radius:15px;
 	box-shadow: 8px 8px 5px #888888;
@@ -116,63 +115,83 @@ h2 {
 .blocktext{
 	padding:10px ;
 	text-align: justify;
-  text-justify: inter-word;
+        text-justify: inter-word;
 	margin-left: auto;
-  margin-right: auto;
-  font-size: 25px;
+        margin-right: auto;
+        font-size: 25px;
 	color:#4f0348;
 	font-family: "Arial", sans-serif;
 }
-
-
-.photo {
-  display:block;
-  /*position: relative;*/
-  background-size: cover;
-  width: 150px;
-  height: 150px;
-  overflow: hidden;
-  border-radius: 55%;
-	/*cursor: pointer;*/
-}
-
-.photo img {
-  height: auto;
-  width: 100%;
-}
 h3 {
-  font-size: 22px;
-  line-height: 37px;
+        font-size: 22px;
+        line-height: 37px;
 }
 h5 {
-  font-size: 15px;
-  line-height: 30px;
+       font-size: 15px;
+       line-height: 30px;
 }
 
 
-.facebook {
-  background: #3280e7;
+.social  {
+  margin-top:10px;
+  border-radius: 50%;
 }
-.facebook:hover {
-  background: #134fa0;
+.fa {
+  padding: 20px;
+  font-size:30px;
+  width: 55px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 10%;
 }
-.twitter {
-  background: #32c8de;
+
+.fa:hover {
+    opacity: 0.9;
 }
-.twitter:hover {
-  background: #188392;
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
 }
-.google-plus {
-  background: #f96f4a;
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
 }
-.google-plus:hover {
-  background: #eb6440;
+.fa-google-plus {
+  background: #dd4b39;
+  color: white;
 }
-.linkedin {
-  background: #729fda;
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
 }
-.linkedin:hover {
-  background: #3069b6;
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+.box {
+      background-color: #cccccc;
+      opacity: 0.6;
+      margin-left: auto;
+      margin-right: auto;
+      width: 300px;
+      height: 300px;
+      border: 3px solid #0000ff;
+}
+.project {
+      margin-left: 25px;
+      display:inline-block;
+      font-size: 35px;
+      text-align:center;
+      color:#96070e;
+}
+ul li a:hover {
+      display: inline;
+      color:#cc0000;
+      text-decoration: none;
+      text-align: center;
+      text-shadow: 1px 1px #555;
 }
 
 /* PAGES
