--- a/Infographic/css/style.css
+++ b/Infographic/css/style.css
@@ -1,6 +1,19 @@
 body {
   background-color: #007fff;
 }
+.a{
+	color:#00004d;
+	font-size: 30px;
+  display: inline-block;
+  margin-left:20px;
+    text-decoration: none;
+}
+a:hover {
+	  display: inline-block;
+    color:#ff9900;
+    text-decoration: none;
+    text-shadow: 2px 2px #555;
+}
 h1 {
   text-align: center;
 
