--- a/Infographic/css/style.css
+++ b/Infographic/css/style.css
@@ -73,33 +73,33 @@ main{
 }
 .logo1{
   margin-left:20px;
-  background-image:url(http://i.imgur.com/3ZnUCAQ.jpg);
+  background-image:url(https://i.imgur.com/3ZnUCAQ.jpg);
 }
 .logo2{
-background-image:url(http://i.imgur.com/9XRJJgd.jpg);
+background-image:url(https://i.imgur.com/9XRJJgd.jpg);
 }
 .logo3{
    
-    background-image:url(http://i.imgur.com/XJBRRnb.jpg);
+    background-image:url(https://i.imgur.com/XJBRRnb.jpg);
 }
 .logo4{
   
-    background-image:url(http://i.imgur.com/17Tlbfa.jpg);
+    background-image:url(https://i.imgur.com/17Tlbfa.jpg);
 }
 .logo5{
     margin-left:20px;
-    background-image:url(http://i.imgur.com/MrrZgWt.png);
+    background-image:url(https://i.imgur.com/MrrZgWt.png);
 }
 .logo6{
    
-    background-image:url(http://i.imgur.com/TlZudiU.jpg);
+    background-image:url(https://i.imgur.com/TlZudiU.jpg);
 }
 .logo7{
   
-    background-image:url(http://i.imgur.com/2XSwLuZ.jpg);
+    background-image:url(https://i.imgur.com/2XSwLuZ.jpg);
 }
 .logo8{
-    background-image:url(http://i.imgur.com/s7nBbBx.jpg);
+    background-image:url(https://i.imgur.com/s7nBbBx.jpg);
 }
 
 .logo9{
@@ -111,45 +111,45 @@ background-image:url(http://i.imgur.com/9XRJJgd.jpg);
     background-image:url(http://i.imgur.com/Es7gSGV.jpg);
 }
 .logo11{
-    background-image:url(http://i.imgur.com/azyqJvh.png);
+    background-image:url(https://i.imgur.com/azyqJvh.png);
 }
 
 .logo12{
-    background-image:url(http://i.imgur.com/jCN571b.jpg);
+    background-image:url(https://i.imgur.com/jCN571b.jpg);
 }
 .logo13{
     margin-left:20px;
-    background-image:url(http://i.imgur.com/wkRaHi0.jpg);
+    background-image:url(https://i.imgur.com/wkRaHi0.jpg);
 }
 .logo14{
-    background-image:url(http://i.imgur.com/LBtf2CO.jpg);
+    background-image:url(https://i.imgur.com/LBtf2CO.jpg);
 }
 .logo15{
-    background-image:url(http://i.imgur.com/R3yszUH.jpg);
+    background-image:url(https://i.imgur.com/R3yszUH.jpg);
 }
 .logo16{
    
-    background-image:url(http://i.imgur.com/GO1BDpu.jpg);
+    background-image:url(https://i.imgur.com/GO1BDpu.jpg);
 }
 .logo17{
    margin-left:20px;
-    background-image:url(http://i.imgur.com/X4h1ijj.jpg);
+    background-image:url(https://i.imgur.com/X4h1ijj.jpg);
 }
 .logo18{
-    background-image:url(http://i.imgur.com/yiVVZJ0.png);
+    background-image:url(https://i.imgur.com/yiVVZJ0.png);
 }
 .logo19{
-    background-image:url(http://i.imgur.com/fKcr4xF.jpg);
+    background-image:url(https://i.imgur.com/fKcr4xF.jpg);
 }
 .logo20{
    
-    background-image:url(http://i.imgur.com/uAADDKv.jpg);
+    background-image:url(https://i.imgur.com/uAADDKv.jpg);
 }
 .logo21{
      margin-left:20px;
-    background-image:url(http://i.imgur.com/Vo3YlUq.jpg);
+    background-image:url(https://i.imgur.com/Vo3YlUq.jpg);
 }
 .fifa1{
   
-    background-image:url(http://i.imgur.com/1RwuYb7.jpg);
+    background-image:url(https://i.imgur.com/1RwuYb7.jpg);
 }
