--- a/Infographic/css/style.css
+++ b/Infographic/css/style.css
@@ -104,11 +104,11 @@ background-image:url(https://i.imgur.com/9XRJJgd.jpg);
 
 .logo9{
     margin-left:20px;
-    background-image:url(http://i.imgur.com/2KZu4wo.jpg);
+    background-image:url(https://i.imgur.com/2KZu4wo.jpg);
 }
 .logo10{
   
-    background-image:url(http://i.imgur.com/Es7gSGV.jpg);
+    background-image:url(https://i.imgur.com/Es7gSGV.jpg);
 }
 .logo11{
     background-image:url(https://i.imgur.com/azyqJvh.png);
