--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 html         { overflow-y:hidden; }
 .page        {
   bottom:0;
-	/*padding-top:150px;*/
   position:absolute;
   text-align:center;
   top:0;
-  width:100%;
+  max-width:100%;
+  padding-bottom:10%;
   background-size:cover;
   background-position: center center;
   background-repeat:no-repeat;
