--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html         { overflow-y:hidden; }
 
   text-align:center;
   top:0;
-  max-width:100%;
+  width:100%;
   padding-bottom:10%;
   background-size:cover;
   background-position: center center;
