--- a/Spel/css/style.css
+++ b/Spel/css/style.css
@@ -16,7 +16,7 @@ body {
  margin-top: 100px;
 }
 .img{
-  background-image: url(http://i.imgur.com/fetocRT.jpg);
+  background-image: url(https://i.imgur.com/fetocRT.jpg);
    background-position: right top;
   width: 800px;
   height: 550px;
