--- a/Grid/css/page.css
+++ b/Grid/css/page.css
@@ -1,46 +1,59 @@
-.container {
-  height:100vh;
-  display:grid;
-  grid-template:1fr;
-  grid-auto-rows:minmax(150px,auto);
-  grid-gap:10px;
-  grid-template-areas:
-  "header"
-  "nav"
-  "main"
-  "aside"
-  "footer";
+*{
+  box-sizing:border-box;
+}
+body{
+  font-size:1.4em;
+  color:#0f0f0f;
+  font-family:'Varela Round',sans-serif;
+  font-weight:bold;
+  padding:0;
+  margin:10px;
+ 
+  background-image :
+  linear-gradient(
+  rgba(0, 0, 0, 0.1),
+  rgba(0, 0, 0, 0.1)
+  ),
+ url("https://i.imgur.com/IhMt2Pw.jpg");
+ background-size:cover;
+background-position: center center;
+background-repeat:no-repeat;
+background-attachment:fixed;
+}
+.container > *{
+  /*padding:0.85em;*/
+
+  text-align:center;
+
+}
+
+header{
+   background-color:#ffffff;
+ 	 opacity:0.6;
+   border-radius:15px;
 }
 nav{
-  grid-area:nav;
-}
-header{
-  grid-area:header;
+  background-color:#ffffff;
+  opacity:0.6;
+  border-radius:15px;
 }
 main{
-  grid-area:main;
-}
-footer{
-  grid-area:footer;
+  background-color:#ffffff;
+  opacity:0.6;
+  border-radius:15px;
 }
 aside{
-  grid-area:aside;
+  background-color:#ffffff;
+  opacity:0.6;
+  border-radius:15px;
 }
-@media (min-width:768px){
-  .container{
-    grid-template-columns:1fr 1fr 1fr;
-    grid-template-rows:100px minmax(150px,auto) 100px;
-    grid-template-areas:
-    "header header header"
-    "nav main aside"
-    "footer footer footer";
-  }
+footer{
+  background-color:#ffffff;
+  opacity:0.6;
+  border-radius:15px;
 }
-@media (min-width:992px){
-  .container{
-    grid-template-areas:
-    "header header header"
-    "nav main aside"
-    "footer footer footer";
-  }
+ul li a {
+  vertical-align:middle;
+   align-items: center;
 }
+
