--- a/Spel/css/style.css
+++ b/Spel/css/style.css
@@ -45,3 +45,10 @@ header {
  header h1:hover{
   background-color: #ff9900;
 }
+.active{
+	color:#00004d;
+	font-size: 30px;
+  display: inline-block;
+  margin-left:20px;
+
+}
