--- a/Spel/css/style.css
+++ b/Spel/css/style.css
@@ -54,7 +54,7 @@ header {
 }
 a:hover {
     display: inline-block;
-    color:#ff9900;
+    color:#4286f4;
     text-decoration: none;
     text-shadow: 1px 1px #555;
 }
