--- a/Weather/api.css
+++ b/Weather/api.css
@@ -33,14 +33,14 @@ h1{
   color:#00004d;
   font-size: 20px;
   display: inline-block;
-  margin-left:50px;
+  margin-left:80px;
   text-decoration: none;
 }
 a:hover {
     display: inline-block;
-    color:#4286f4;
+    color:#ff9900;
     text-decoration: none;
-    text-shadow: 1px 1px #555;
+    text-shadow: 2px 2px #555;
 }
 .sidenav {
     height: 100%;
